src/core-crm/objects/Potential_Duplicate__c/Potential_Duplicate__c.object-meta.xml
<CustomObject>
    <label>Potential Duplicate</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Duplicates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>