src/core-crm/objects/Potential_Duplicate__c/fields/Duplicate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to newly created contact</description>
    <label>Duplicate Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Potential Duplicates (Duplicate Contact)</relationshipLabel>
    <relationshipName>Potential_Duplicates1</relationshipName>
    <type>Lookup</type>
</CustomField>