src/core-crm/objects/Potential_Duplicate__c/fields/Duplicate_Lead__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to newly created lead</description>
    <label>Duplicate Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Potential Duplicates (Duplicate Lead)</relationshipLabel>
    <relationshipName>Potential_Duplicates1</relationshipName>
    <type>Lookup</type>
</CustomField>